# app-hedera

./: .gitignore  Makefile  README.md  apdu.apdu  autorun.sh  ledger_app.toml  nanopb_pb2.py
.github/workflows/: ci.yml  codeql-workflow.yml
docs/: apdu.md
fuzzing/: CMakeLists.txt  README.md  fuzzer_evm_payload.c  fuzzer_hedera_format.c  fuzzer_proto_full.c  fuzzer_proto_varlen_parser.c  fuzzer_staking.c  fuzzer_time_format.c  fuzzing_report.txt  run_fuzzing.sh
fuzzing/corpus/proto_varlen_parser/: crash-proto_varlen_parser-1  crash-proto_varlen_parser-2
fuzzing/mock/: bolos_sdk_mock.c  bolos_sdk_mock.h  os.h  os_task.c  os_task.h
proto/: contract_call.pb.c  contract_call.pb.h  contract_call.proto  contract_call_pb2.py  crypto_update.pb.h  transaction_body.pb.h  transaction_body.proto  transaction_body_pb2.py
src/: evm_parser.c  evm_parser.h  get_public_key.c  get_public_key.h  handlers.h  hedera.c  hedera.h  hedera_format.c  hedera_format.h  main.c  proto_varlen_parser.c  proto_varlen_parser.h  sign_contract_call.c  sign_contract_call.h  sign_transaction.c  sign_transaction.h  staking.c  staking.h  time_format.c  time_format.h  utils.c  utils.h
src/swap/: handle_check_address.c  handle_check_address.h  handle_get_printable_amount.c  handle_get_printable_amount.h  handle_swap_sign_transaction.c  handle_swap_sign_transaction.h  hedera_swap_utils.h  swap_token_utils.c  swap_token_utils.h  swap_utils.c  swap_utils.h
src/tokens/: token_address.h
src/tokens/cal/: cal.c  cal.h  token_lookup.c  token_lookup.h
src/ui/: app_globals.h  debug.h  io.c  nbgl_custom_warning_screen.c  nbgl_custom_warning_screen.h  ui_get_public_key.c  ui_glyphs_helper.h  ui_idle.c  ui_sign_transaction.c
tests/: test_hedera.py
tests/application_client/: hedera.py  hedera_builder.py
tests/apps/: hedera.py  hedera_builder.py
tests/standalone/: requirements.txt  test_hedera.py  usage.md  utils.py
tests/swap/: cal_helper.py  helper_tool.py  requirements.txt  test_hedera.py
tests/unit/: .gitignore  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  README.md  nanopb_system.h  test_evm_parser.c  test_pb_decode_erc20.c  test_proto_varlen_edge_cases  test_proto_varlen_parser  test_proto_varlen_security  test_sign_contract_call.c
tests/unit/mock/: os.h  putchar.c  staking_mock.c  throw_mock.c  token_lookup_mock.c
tests/unit/proto_varlen/: test_contract_call_nanopb.c  test_contract_call_simple.c  test_proto_varlen_edge_cases.c  test_proto_varlen_parser.c  test_proto_varlen_security.c
